@@ -18,7 +18,7 @@
 # $Id$
 #
 
-AC_INIT([logwarn Utility for finding interesting messages in log files], [1.0], [http://code.google.com/p/logwarn/], [logwarn])
+AC_INIT([logwarn Utility for finding interesting messages in log files], [1.0.1], [http://code.google.com/p/logwarn/], [logwarn])
 AC_CONFIG_AUX_DIR(scripts)
 AM_INIT_AUTOMAKE
 dnl AM_MAINTAINER_MODE
