@@ -2,6 +2,7 @@
 Version 1.0.1
 
     - Added some man page fixes and clarifications
+    - Added a Nagios plugin
 
 Version 1.0 (r6) Released December 29, 2010
 
